<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sugutomo</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">261496627386045</string>
    <string name="upload_image">顔写真登録</string>
    <string name="splash_screen_title1">すぐともへようこそ！</string>
    <string name="splash_screen_title2">新しい出会いが待っています！</string>
    <string name="splash_screen_title3">すでに登録済みユーザーは</string>
    <string name="btn_new_register">新規登録</string>
    <string name="title_register_photo">この写真でいいですか？</string>
    <string name="title_register_nophoto1">あなたの顔写真を登録してくだいさい</string>
    <string name="title_register_nophoto2">顔写真はあなたの顔が分かる適切なものを選んでくだいさい。</string>
    <string name="btn_input_fbphoto">facebookの写真をインポート</string>
    <string name="btn_input_uploadphoto">写真をアップルロードする</string>
    <string name="text_send_mail">へ確認メールを送付しました。</string>
    <string name="text_accept_account">確認メール内のリンクをクリックしてアカウントを有効化してください。</string>
    <string name="text_resend_mail">確認メールが届いていない場合は</string>
    <string name="btn_resend_mail">確認メール送信</string>
    <string name="text_is_need">必須</string>
    <string name="title_present">ポイントをプレゼント</string>
    <string name="title_top_appeal">アピールーユーザー</string>
    <string name="title_filter_user">ユーザー絞り込み</string>
    <string name="text_status">ステータス</string>
    <string name="text_name">ユーザー名</string>
    <string name="text_define_max_characters">(%1d字以内)</string>
    <string name="mess_disconnected_location">位置情報が切断されました</string>
    <string name="mess_connected_location">位置情報を接続しています</string>
    <string name="mess_connection_location_failed">位置情報の取得に失敗しました</string>
    <string name="loading">読み込み中</string>
    <string name="broastcast_title">他のユーザーへ一斉送信しよう！</string>
    <string name="broastcast_sex">性別</string>
    <string name="broastcast_people">人</string>
    <string name="broastcast_totalsend">人数</string>
    <string name="broastcast_messgener">あいさつ文</string>
    <string name="broastcast_messgener_hello">こんにちは ^^</string>
    <string name="broastcast_cost">消費ポイント</string>
    <string name="broastcast_cost_defalut">100pt</string>
    <string name="broadcast_totalsend_dialog_title">１項目を選択してください</string>
    <string name="broastcast_totalsend_defalut">100 人</string>
    <string name="broastcast_text_send_btn">一斉送信</string>
    <string name="broastcast_text_women">女性</string>
    <string name="broastcast_text_men">男性</string>
    <string name="broastcast_text_both">両方</string>
    <string name="setting_push_notify">プッシュ通知の設定</string>
    <string name="setting_notification">メール通知</string>
    <string name="setting_push_notify_all">全て</string>
    <string name="setting_push_notify_favorite">お気に入りのみ</string>
    <string name="notification_dialog_setting_title">ビッグビュー通知設定</string>
    <string name="setting_on">オン</string>
    <string name="setting_off">オフ</string>
    <string name="buypoint_text_buy_btn">ポイントを追加</string>
    <string name="buypoint_point_default">0pt</string>
    <string name="buypoint_point_possession">あなたのポイント:</string>
    <string name="buypoint_list_buy_title">追加ポイントを選択</string>
    <string name="buypoint_freeget">無料ポイントGETはこちら♪</string>
    <string name="buypoint_cost">金額</string>
    <string name="buypoint_janpan_yen">￥</string>
    <string name="buyvip_title">あなたをアピールしよう！\nTOPページに優先的に表示されます！</string>
    <string name="buyvip_list_purchase">アピール時間を選択</string>
    <string name="buyvip_cost_txt">消費ポイント</string>
    <string name="buyvip_buybtn_txt">アピール</string>
    <string name="profile_default_status"> デートしたいなぁ…。かまって！</string>
    <string name="edit_profile_default_status">ひと言アピール</string>
    <string name="edit_profile_title">マイプロフィール設定</string>
    <string name="profile_default_sex"> デートしたいなぁ…。かまって！</string>
    <string name="profile_default_age">歳</string>
    <string name="profile_default_high">身長</string>
    <string name="profile_setting">詳細設定</string>
    <string name="profile_gift">ギフト</string>
    <string name="profile_favorite">お気に入り追加</string>
    <string name="profile_chat">チャット</string>
    <string name="profile_inteset_partner">興味のある対象</string>
    <string name="profile_detail_more">プロフｨ−ルを見る</string>
    <string name="profile_detail_cigar">タバコ</string>
    <string name="profile_detail_system">体系</string>
    <string name="unblocked_user">このユーザーのブロックを解除</string>
    <string name="term_of_user">利用規約</string>
    <string name="privace_policy">プライバシーポリシー</string>
    <string name="btn_login">ログイン</string>
    <string name="setting_new_mail">新しいメールアドレス</string>
    <string name="setting_current_pass">設定したパスワード</string>
    <string name="setting_new_pass">新しく設定したパスワード</string>
    <string name="setting_repeat_new_pass">パスワードを再設定しました</string>
    <string name="register_edittext_mail">メールアドレス</string>
    <string name="login_forgot_password_edittext">登録されているメールアドレス</string>
    <string name="login_text1">または</string>
    <string name="login_text2">登録されているメールアドレスへ、再設定のリンクメールが送信されます。</string>
    <string name="login_fail_title"><u>ログインできない方へ</u></string>
    <string name="register_edittext_username">ユーザー名</string>
    <string name="register_edittext_password">パスワード</string>
    <string name="register_checkbox">私は18歳以上です</string>
    <string name="btn_fb_login">facebookでログイン</string>
    <string name="register_checkbox_error">チェックボックスを選択しなけらばならない</string>
    <string name="btn_fb_register">facebookで登録</string>
    <string name="btn_fb_logout">facebookでログアウト</string>
    <string name="btn_confirm_photo">保存して進む</string>
    <string name="btn_create_profile">プロファイル保存</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">キャンセル</string>
    <string name="btn_chatET">内容入力</string>
    <string name="btn_picture_emo">絵文字</string>
    <string name="btn_stamp_emo">スタンプ</string>
    <string name="btn_chatOptionCamera">画像</string>
    <string name="btn_chatOptionPresent">プレゼント</string>
    <string name="btn_chatOptionOther">その他</string>
    <string name="btn_chat">チャット</string>
    <string name="btn_profile">プロファイルを見る</string>
    <string name="btn_close">閉じる</string>
    <string name="btn_chat_remove">削除</string>
    <string name="tv_edit_profile">編集</string>
    <string name="filter_not_selected">なし</string>
    <string name="filter_basic_title">基本モード</string>
    <string name="filter_advance_title">条件モード</string>
    <string name="filter_distance">距離</string>
    <string name="filter_age">年齢</string>
    <string name="filter_login">前回のログイン</string>
    <string name="filter_submit">絞り込み</string>
    <string name="SELECT_FUNCTION">Select function</string>
    <string name="API_SUCC_ACCOUNT_REGISTER">登録いたしました!</string>
    <string name="FB_API_SUCC_LOGIN">facebookアカウントでログインしました</string>
    <string name="API_SUCC_ACCOUNT_LOGIN">ログイン</string>
    <string name="API_SUCC_SEND_EMAIL">メールアドレスを再送信しました</string>
    <string name="API_SUCC_CREATE_PROFILE">プロフィールを作成しました</string>
    <string name="API_SUCC_UPDATE_LOCATION">位置情報を更新しました</string>
    <string name="ERR_INPUT_MISTAKE">もう一度入力してください</string>
    <string name="ERR_FILE_NOT_FOUND">選択した写真が見つかりません</string>
    <string name="ERR_INPUT_EMPTY">必須項目を入力してください</string>
    <string name="ERR_TITLE">エラー!</string>
    <string name="ERR_CONNECT_FAIL">接続できません！通信状況を確認してください</string>
    <string name="ERR_LOAD_STAMP">スタンプを取得できません！</string>
    <string name="FB_API_ERR_LOGIN">ログインできません</string>
    <string name="API_ERR_ANOTHER">エラーが発生しました</string>
    <string name="API_ERR_MISSING_PARAMS">再度、入力してください</string>
    <string name="API_ERR_ACCOUNT_EXISTED">そのアカウントは既に存在します</string>
    <string name="API_ERR_ACCOUNT_WRONG_REGISTER_DATA_TYPE">入力に誤りがあります</string>
    <string name="API_ERR_ACCOUNT_LOGIN_FAIL">ログインできません</string>
    <string name="API_ERR_ACCOUNT_DOES_NOT_EXISTED">そのアカウントは存在しません</string>
    <string name="API_ERR_ACCOUNT_IS_INACTIVE_OR_BLOCKED">交流できません</string>
    <string name="API_ERR_SEND_EMAIL_FAIL">送信に失敗しました</string>
    <string name="API_ERR_ACCOUNT_IS_ACTIVATED">アカウントが有効になりました</string>
    <string name="API_ERR_USER_USERNAME_NOT_EXIST">ユーザ名は存在しません</string>
    <string name="API_ERR_SAVE_LOCATION">位置情報が更新できませんでした</string>
    <string name="API_ERR_GET_STAMP_FAIL">スタンプを取得できません</string>
    <string name="CLOSE">閉じる</string>
    <string name="SUBMIT">サブミット</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="week">週</string>
    <string name="day">日</string>
    <string name="hour">時間</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="before">前</string>
    <string name="send_support_EXTRA_EMAIL">app-sample@shane-inc.co.jp</string>
    <string name="send_support_EXTRA_SUBJECT">Sugutomo お問い合わせ・ご意見・不具合のご連絡</string>
    <string name="send_support_EXTRA_TEXT" formatted="false">ご利用、誠に有難うございます。\nアプリ不具合や操作方法などのご質問がありましたら、内容をご記載頂きますでしょうか。\n\n【内容はこちらに】\n\n\n\n\n\n\n\n\n\n
ご連絡頂き、有難うございました。\n
ご意見を参考に、サービス向上に致します。\n
今後とも、宜しくお願い致します。\n\n
・個体識別情報: %1s\n
・OSバージョン: %2s\n
・アプリバージョン: %3s\n
・機種名 : %4s\n</string>
    <string name="chat_error_user_not_found">%sさんは 見つかりませんでした</string>
    <string name="appeal_result">アピール購入しました。残りのポイントは%dポイント</string>
    <string name="CAPTURE_USER_CANCEL">写真を選択解除しました</string>
    <string name="CAPTURE_ERROR">すみません!写真反映に失敗しました</string>
    <string name="CHOOSE_USER_CANCEL">写真を選択解除しました</string>
    <string name="CHOOSE_ERROR">すみません!\n写真を選択に失敗しました</string>
    <string name="title_option_message">機能</string>
    <string name="title_delete_conversation">会話を削除</string>
    <string name="set_wallpaper">壁紙セットしました</string>
    <string name="share_wallpaper">シェアしました</string>
    <string name="toast_wallpaper_set">壁紙を更新しました</string>
    <string name="toast_wallpaper_set_failed">壁紙をセットできませんでした</string>
    <string name="unformat_receive_image">画像を送信しました。</string>
    <string name="format_receive_image">%sさんが画像を送信しました。</string>
    <string name="format_receive_footprint">%s さんが、興味を持っているかも！</string>
    <string name="send_broastcast" formatted="false">%d人のユーザーへ選択されたメッセージ『%s』を送信します。
ポイントは%dポイント消費されます</string>
    <string name="enable_gps">GPS情報を設定しますか？</string>
    <string name="setting_more_title">通知設定</string>
    <string name="format_receive_point">%1$sポイントを受け取りました！</string>
    <string name="loading_price">読み込む中</string>
    <string name="notice">通知する</string>
    <string name="avatar">画像</string>
    <string name="set_avatar">画像をセットする</string>
    <string name="remove_image">画像を変更しました</string>
    <string name="add">追加します</string>
    <string name="remove">移動させます</string>
    <string name="you_have">所持しています</string>
    <string name="uploading">アップロード中</string>
    <string name="verify_purchase">購入を確認してください</string>
    <string name="log_out">ログアウト</string>
    <string name="sending">送信しました</string>
    <string name="set_wallstatus">未入力項目があります</string>
    <string name="wall_status">入力項目</string>
    <string name="PURCHASE_SUCESS">購入有難うございます。\n%dポイント所持しています</string>
    <string name="chat_error_not_enough_point" formatted="false">%s にメッセージを送信するためポイントが足りません\n%1dポイントを保持しているが、メッセージ送信のため、%1dポイントが要ります\nポイントを購入しますか？</string>
    <string name="chat_send_message_success">メッセージ送信されました！</string>
    <string name="chat_block_user">ブロックされています！</string>
    <string name="chat_block_by_user">%sさんブロックを解除しました</string>
    <string name="chat_unblock_user">ブロックされていません</string>
    <string name="chat_unblock_by_user">%sさんにブロックを解除されました</string>
    <string name="chat_read">既読</string>
    <string name="chat_read_by_user">%s have read your message</string>
    <string name="chat_text">You have received the text message from %s</string>
    <string name="chat_stamp">You have received the stamp message from %s</string>
    <string name="chat_image">You have received the image message from %s</string>
    <string name="chat_point_receive" formatted="false">%sさんが%1dポイントをプレゼントしました！</string>
    <string name="chat_point_send" formatted="false">%1dポイントプレゼントしました！</string>
    <string name="send_broastcast_sure">一斉送信しますか？</string>
</resources>