<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@color/Lightgray"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="@color/text_edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:layout_marginTop="20dp"
            android:text="@string/splash_screen_title1"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical|center"
            android:layout_margin="10dp"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/text_send_mail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/text_send_mail"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/text_accept_account"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/text_resend_mail"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/btn_resend_mail"
                style="@style/DefaultButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_btn_login"
                android:clickable="true"
                android:onClick="onClick"
                android:padding="3dp"
                android:text="@string/btn_resend_mail"
                android:textColor="@android:color/white"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>