<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_marginBottom="10dip">

    <TextView
        android:id="@+id/custom_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="40dip"
        android:layout_marginBottom="40dip"
        android:textSize="20sp"
        android:text="@string/send_broastcast_sure" />
<View 
    android:id="@+id/custom_divider"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:background="@color/black"
    />
    <Button
        android:id="@+id/custom_dialog_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_press_gray"
        android:layout_toLeftOf="@id/custom_divider"
        android:layout_below="@id/custom_dialog_title"
        android:layout_marginRight="5dip"
        android:layout_marginLeft="10dip"
         android:layout_marginBottom="10dip"
        android:text="@string/btn_cancel"
        />

    <Button
        android:id="@+id/custom_dialog_ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_press"
        android:layout_toRightOf="@id/custom_divider"
        android:layout_below="@id/custom_dialog_title"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="10dip"
         android:layout_marginBottom="10dip"
        android:text="@string/btn_ok" 
        android:textColor="@color/white"
        />

</RelativeLayout>
</ScrollView>